--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 .App {
   text-align: center;
+  width: 575px;
+  max-width: 100%;
+}
+
+
+input.form-control {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.btn {
+  margin: 5px
 }
 
 .App-logo {
